feat: Add snapshots for various workflows and processes
- Created minimal_process snapshots for default and metro configurations.
- Added nf_core_fastqc_module snapshots for conditional, default, and metro configurations.
- Introduced nf_core_fetchngs_sra snapshots covering conditional, default, and metro configurations.
- Added quantms_style snapshots for conditional, default, and metro configurations.
- Created scenario_channel_nodes snapshots for conditional, default, and metro configurations.
- Introduced scenario_cherry_pick snapshots for conditional, default, and metro configurations.
- Added scenario_merge snapshots for conditional, default, and metro configurations.
- Created scenario_multi_cherry_pick snapshots for conditional, default, and metro configurations.
- Introduced scenario_workflow_call_branches snapshots for conditional, default, and metro configurations.
- Added simple_workflow snapshots for conditional, default, and metro configurations.